--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "50e5ed10-d601-4496-a1d8-7daa5db97ac1"
   },
   "newProjectRoot": "projects",
   "projects": {
